--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "material-ui": "^1.0.0-beta.21",
     "prop-types": "^15.5.8"
   },
   "peerDependencies": {
     "react": "15.x"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
     "nwb": "^0.19.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
